<resources>
    <string name="app_name">HydroNet</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="drawer_open">Open Navigation Drawer</string>
    <string name="drawer_close">Close Navigation Drawer</string>

    <!--service string-->
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>

    <string name="login">Log In</string>
    <string name="signup">Sign Up</string>
    <string name="menu_home">Monitor</string>
    <string name="menu_my_profile">My Profile</string>
    <string name="menu_community">Community</string>
    <string name="menu_feed">Feed</string>
    <string name="menu_notification">Notification</string>
    <string name="menu_user">User</string>
    <string name="menu_trading">Trading</string>
    <string name="hello_blank_fragment">this is blank fragment</string>
    <string name="menu_setting">Setting</string>
    <string name="msg_warning">Please check the system and see what\'s wrong and control sensor through the app</string>
    <string name="recommend">Similar plant</string>
    <string name="menu_sub_plant">Plants</string>
    <string name="menu_sub_part">Parts</string>
    <string name="menu_sub_material">Materials</string>
    <string name="label_plant_overview">Income overview</string>
    <string name="menu_sub_summary">Summary</string>
    <string name="msg_test_publish_microgear">Add plant successful~</string>
    <string name="label_part_overview">Hardware parts overview</string>
    <string name="label_material_overview">Materials overview</string>
    <string name="menu_add_new">Create new environment</string>
    <string name="menu_add_user">Grow plant from your collection</string>
    <string name="menu_add_system">Grow plant from system collection</string>
    <string name="menu_netpie">NetPie Console</string>
    <string name="modal_title_add_plant">Add plant</string>
    <string name="modal_subtitle_add_plant">(confirm means starting the farm)</string>
    <string name="at">\@</string>
    <string name="add_location_prompt">Display location remaining in farm</string>
    <string name="map_layout">show layout</string>
    <string name="modal_topic_add_sensor">Average value</string>
    <string name="btn_add_plant">Start farm</string>
    <string name="btn_cancel">Cancel</string>
    <string name="label_sensor_water">WATER LEVEL</string>
    <string name="label_sensor_ph">pH LEVEL</string>
    <string name="label_sensor_ec">EC LEVEL</string>
    <string name="menu_add_custom_farm">Your own hydroponic farm</string>
    <string name="menu_add_system_farm">Default farm with sensors installed</string>
    <string name="label_now_in_farm">Added :</string>
    <string name="menu_add_plant">Add and start planting</string>

    <string name="basic_example">basic example</string>
    <string name="adapter_example2">adapter example 1</string>
    <string name="adapter_example3">adapter example 2</string>
    <string name="adapter_example4">adapter example 3</string>
    <string name="custom_adapter_example">custom adapter example</string>
    <string name="hashmap_adapter_example">grouped/expandable options example</string>
    <string name="adapter_example7">adapter example custom title 1</string>
    <string name="adapter_example8">adapter example custom title 2</string>
    <string name="adapter_example9">adapter example custom title 3</string>
    <string name="adapter_example10">adapter example custom title 4</string>
    <string name="title">Select Type</string>
    <string name="action_settings">Settings</string>
    <string name="invalid_location_choose">Deselect another location to change to new location</string>
    <string name="label_system_plant">System default plant</string>
    <string name="label_user_plant">User plant</string>
    <string name="label_custom_plant">Add your own plant</string>
    <string name="login_user">Username/Email</string>
    <string name="login_password">Password</string>
    <string name="signup_user">Username</string>
    <string name="signup_email">Email address</string>
    <string name="signup_confirm_pw">Confirm password</string>
    <string name="equipment_detail">\t- detail1\n\t- detail2\n\t- detail3</string>
    <string name="btn_share">Tell others what you have</string>
    <!--<string name="bullet">\t•</string>-->
    <string name="bullet">\t-</string>
    <string name="liked_count">Liked :</string>
    <string name="btn_add_more_plant">Add more</string>
    <string name="btn_plant_change">change</string>
    <string name="plant_name_preview">\???</string>
    <string name="dialog_confirm">Do you really want to continue?</string>
    <string name="diglog_positive">YES</string>
    <string name="dialog_negative">NO</string>
    <string name="btn_negotiate">Negotiate!</string>
    <string name="label_trade_overview">Trading statistic overview</string>
    <string name="trade_paid">paid</string>
    <string name="trade_gain">gained</string>
    <string name="label_select_all">Auto select</string>
    <string name="label_select_none">Select none</string>
    <string name="btn_add_max">MAX</string>
    <string name="label_select_done">Done</string>
    <string name="menu_sub_sell">Sell</string>
    <string name="menu_sub_buy">Buy</string>
    <string name="notification">Your product announcement negotiation is updated by</string>
    <string name="timestamp">2 minutes ago</string>
    <string name="logout">Logout</string>
    <string name="about_app">see Licenses and credit information</string>
    <string name="menu_license">About HydroNet</string>
    <string name="btn_edit_db">Edit Database</string>
    <string name="menu_edit_db">Edit Firebase Database</string>
    <string name="btn_control_farm">Control farm</string>
    <string name="btn_remove_db">Remove from Database</string>
    <string name="menu_add_story">Add story</string>
    <string name="prompt_add_story">choose story type to create</string>
    <string name="prompt_add_sale_story_detail">About this plant for sale</string>
    <string name="prompt_add_story_detail">More about this plant</string>
    <string name="btn_adding_story">Add story</string>
    <string name="prompt_coin_condition">Price per unit (coins)</string>
    <string name="dayused">days used</string>
    <string name="menu_negotiate">Reserve request</string>
    <string name="user_menu_1">more information about hydroponics</string>
    <string name="user_menu_2">techniques by pro farmers</string>
    <string name="user_menu_3">plants to grow for beginners</string>
    <string name="all_reserved">All plants reserved</string>
    <string name="story_type_normal">Story about plant</string>
    <string name="story_type_sale">Sale announcement story</string>
    <string name="story_type_progress">Growing progress story</string>
    <string name="prompt_sale_due_date">Close reservation when plants are harvested</string>
    <string name="prompt_sale_due_sub">Reservation due date</string>
    <string name="btn_choose_plant_sale">Choose plant to sell</string>
    <string name="menu_add_sale_story">Add sale story</string>
    <string name="avg_ph_description">Display average of pH value range of all plant in added list</string>
    <string name="avg_ec_description">Display average of EC value range of all plant in added list</string>
    <string name="plant_location">Location</string>
    <string name="add_more_plant">What plant do you want to add?</string>
    <string name="menu_sub_daily">Daily</string>
    <string name="menu_sub_weekly">Weekly</string>
    <string name="planted">planted</string>
    <string name="growing">growing</string>
    <string name="harvested">harvested</string>
    <string name="sold">sold</string>
    <string name="bought">bought</string>
    <string name="fav_story">favorited story</string>
    <string name="story">your story</string>
    <string name="menu_sub_trade">Trade</string>
    <string name="menu_sub_story">Story</string>
    <string name="menu_sub_liked_story">Liked</string>
    <string name="water_level_description">Value of height of water in the mixed solution tank.;Used to determined the fertilizer solution concentration.;Also used to detect tank leakage.</string>
    <string name="ph_level_description">Value of acidity of the mixed solution.;Appropriate pH value is key to successful gardening</string>
    <string name="ec_level_description">Stands for \'electrical conductivity\';Value of conductivity of the solution.;Higher value means high concentration or nutrient-rich condition.</string>
    <string name="got_it">GOT IT</string>
    <string name="ideal">Ideal value: </string>
    <string name="label_empty_state">No data to show at this time</string>
    <string name="label_graph_in_farm">Plants in farm:</string>
    <string name="label_notification">Notification</string>
    <string name="label_negotiation_description">Who reserved for this offer?</string>
    <string name="label_negotiation_offer">Your reservation :</string>
    <string name="make_reservation">Make reservation</string>
    <string name="label_reserved">You have already reserve</string>
    <string name="menu_sub_edit">Edit</string>
    <string name="menu_sub_delete">Delete</string>
    <string name="label_farm_limitation">The farm will handle the value range.\n(1.2#82111.6)</string>
    <string name="menu_sub_monthly">Monthly</string>
    <string name="menu_sub_harvested">List</string>
    <string name="read_all">Mark all as read</string>
    <string name="option_see_all">Show all</string>
    <string name="option_sensor">Show ONLY farm notification</string>
    <string name="option_story">Show ONLY story notification</string>
    <string name="menu_sub_bought">Bought</string>
    <string name="menu_sub_sold">Sold</string>
    <string name="option_read">Show read notification</string>
    <string name="option_not_read">Show unread notification</string>
    <string name="title_weekly_notice">Weekly notification</string>
    <string name="note">Note :</string>
    <string name="note_weekly_notice">This message will appear every week until plants in the current round are harvested\nThis way, you are motivated to do planting by making it through each week, while being able to cancel the process at the end of each week.\nYou can edit the setting in app setting page.</string>
    <string name="label_continue_weekly">CONTINUE</string>
    <string name="label_terminate_weekly">TERMINATE</string>
    <string name="label_weekly_notice">Continue farming?</string>
    <string name="label_farm_not_running">Your farm is not running right now.\nNo data to show at this time</string>
    <string name="menu_sub_record_result">Record result</string>
    <string name="failed">failed</string>
</resources>
