<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView android:text="@string/basic_example" android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <io.apptik.widget.multiselectspinner.MultiSelectSpinner
        android:id="@+id/multiselectSpinner1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <TextView android:text="@string/adapter_example2" android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <io.apptik.widget.multiselectspinner.MultiSelectSpinner
        android:id="@+id/multiselectSpinner2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <TextView android:text="@string/adapter_example3" android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <io.apptik.widget.multiselectspinner.MultiSelectSpinner
        android:id="@+id/multiselectSpinner3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <TextView android:text="@string/adapter_example4" android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <io.apptik.widget.multiselectspinner.MultiSelectSpinner
        android:id="@+id/multiselectSpinner4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <TextView android:text="@string/custom_adapter_example" android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <io.apptik.widget.multiselectspinner.MultiSelectSpinner
        android:id="@+id/multiselectSpinner5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <TextView android:text="@string/hashmap_adapter_example" android:layout_width="wrap_content"
        android:layout_height="wrap_content" />@drawable/

    <io.apptik.widget.multiselectspinner.ExpandableMultiSelectSpinner
        android:id="@+id/multiselectSpinner6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <TextView android:text="@string/adapter_example7" android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <io.apptik.widget.multiselectspinner.MultiSelectSpinner
        android:id="@+id/multiselectSpinner7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <TextView android:text="@string/adapter_example8" android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <io.apptik.widget.multiselectspinner.MultiSelectSpinner
        android:id="@+id/multiselectSpinner8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleDividerColor="#0f0"
        />

    <TextView android:text="@string/adapter_example9" android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <io.apptik.widget.multiselectspinner.MultiSelectSpinner
        android:id="@+id/multiselectSpinner9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <TextView android:text="@string/adapter_example10" android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <io.apptik.widget.multiselectspinner.MultiSelectSpinner
        android:id="@+id/multiselectSpinner10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />


</LinearLayout>