<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_frame_content"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <LinearLayout android:orientation="vertical"
        android:gravity="center"
        android:padding="@dimen/padding_medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <com.senior.gizgiz.hydronet.HelperClass.SquareThumbnail
            android:layout_width="90dp"
            android:layout_height="wrap_content">
            <ImageView android:id="@+id/ic_sensor"
                android:src="@drawable/ic_warning"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </com.senior.gizgiz.hydronet.HelperClass.SquareThumbnail>
        <com.senior.gizgiz.hydronet.HelperClass.CustomTextView
            android:id="@+id/label_popup_title"
            android:text="@string/label_weekly_notice"
            app:textStyle="bold"
            android:textSize="@dimen/titleSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <View android:layout_width="wrap_content"
            android:layout_height="20dp" />
        <com.senior.gizgiz.hydronet.HelperClass.CustomTextView
            android:id="@+id/ideal_sensor_value"
            android:gravity="center"
            android:text="@string/note_weekly_notice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout android:gravity="end"
        android:paddingStart="@dimen/padding_medium"
        android:paddingEnd="@dimen/padding_medium"
        android:paddingBottom="@dimen/padding_medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.senior.gizgiz.hydronet.HelperClass.CustomTextView
            android:id="@+id/btn_terminate"
            android:text="@string/label_terminate_weekly"
            app:textStyle="bold"
            android:textColor="@color/red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <com.senior.gizgiz.hydronet.HelperClass.CustomTextView
            android:id="@+id/btn_continue"
            android:layout_marginStart="@dimen/padding_small"
            android:text="@string/label_continue_weekly"
            app:textStyle="bold"
            android:textColor="@color/green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>