<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_history_menu_bottom"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffff"
    android:orientation="vertical"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
    <com.senior.gizgiz.hydronet.HelperClass.CustomTextView
        android:text="Choose story type :"
        android:padding="@dimen/activity_horizontal_margin"
        android:textSize="@dimen/txt_list_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <com.senior.gizgiz.hydronet.HelperClass.CustomTextView
        android:id="@+id/story_type_normal"
        android:text="@string/story_type_normal"
        android:gravity="center_vertical"
        android:padding="@dimen/activity_horizontal_margin"
        android:layout_gravity="center"
        android:drawableStart="@drawable/ic_growing"
        android:drawablePadding="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="60dp" />
    <com.senior.gizgiz.hydronet.HelperClass.CustomTextView
        android:id="@+id/story_type_sale"
        android:text="@string/story_type_sale"
        android:gravity="center_vertical"
        android:padding="@dimen/activity_horizontal_margin"
        android:layout_gravity="center"
        android:drawableStart="@drawable/ic_on_sale"
        android:drawablePadding="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="60dp" />
    <com.senior.gizgiz.hydronet.HelperClass.CustomTextView
        android:id="@+id/story_type_progress"
        android:text="@string/story_type_progress"
        android:gravity="center_vertical"
        android:padding="@dimen/activity_horizontal_margin"
        android:layout_gravity="center"
        android:drawableStart="@drawable/ic_graph"
        android:drawablePadding="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="60dp" />
</LinearLayout>