<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_weight="0.5"
                android:layout_width="match_parent"
                android:layout_height="10dp" />
            <ImageView
                android:layout_weight="0.5"
                android:src="@drawable/ic_down_arrow"
                android:layout_width="match_parent"
                android:layout_height="10dp" />
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:paddingTop="20dp"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.senior.gizgiz.hydronet.HelperClass.CustomEditText
                android:id="@+id/username_text"
                android:drawableStart="@drawable/ic_user"
                android:drawablePadding="@dimen/padding_small"
                android:hint="@string/signup_user"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <com.senior.gizgiz.hydronet.HelperClass.CustomEditText
                android:id="@+id/email_text"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="@dimen/padding_small"
                android:hint="@string/signup_email"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <com.senior.gizgiz.hydronet.HelperClass.CustomEditText
                android:id="@+id/password_text"
                android:drawableStart="@drawable/ic_pw"
                android:drawablePadding="@dimen/padding_small"
                android:hint="@string/login_password"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <com.senior.gizgiz.hydronet.HelperClass.CustomEditText
                android:id="@+id/confirm_pw_text"
                android:drawableStart="@drawable/ic_confirm_pw"
                android:drawablePadding="@dimen/padding_small"
                android:hint="@string/signup_confirm_pw"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <View android:layout_width="match_parent"
                android:layout_height="@dimen/margin_separator" />
            <com.senior.gizgiz.hydronet.HelperClass.CustomButton
                android:id="@+id/signup_button"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="17dp"
                android:background="@drawable/bg_btn_gray"
                android:text="Sign up"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="40dp" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>