<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/app_bg"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout android:id="@+id/top_layout"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="@dimen/padding_so_small"
        android:paddingStart="@dimen/padding_small"
        android:paddingEnd="@dimen/padding_small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.senior.gizgiz.hydronet.HelperClass.CustomTextView
            android:id="@+id/list_title"
            android:text="@string/label_notification"
            app:textStyle="bold"
            android:layout_weight="15"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <ImageView android:id="@+id/btn_option"
            android:src="@drawable/ic_option"
            android:layout_weight="1"
            android:rotation="90"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <View android:id="@+id/separator"
        android:background="@color/gray"
        android:layout_below="@id/top_layout"
        android:layout_marginStart="@dimen/margin_separator"
        android:layout_marginEnd="@dimen/margin_separator"
        android:layout_width="match_parent"
        android:layout_height="1dp" />
    <LinearLayout android:id="@+id/btn_layout"
        android:gravity="end"
        android:layout_below="@id/separator"
        android:padding="@dimen/padding_so_small"
        android:paddingStart="@dimen/padding_small"
        android:paddingEnd="@dimen/padding_small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.senior.gizgiz.hydronet.HelperClass.CustomTextView
            android:id="@+id/btn_read_all"
            android:text="@string/read_all"
            android:paddingStart="@dimen/padding_small"
            android:paddingEnd="@dimen/padding_small"
            android:paddingTop="@dimen/padding_so_small"
            android:paddingBottom="@dimen/padding_so_small"
            android:background="@drawable/bg_btn_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/simple_list_swipe_layout"
        android:layout_below="@id/btn_layout"
        android:paddingTop="@dimen/padding_so_small"
        android:paddingStart="@dimen/padding_so_small"
        android:paddingEnd="@dimen/padding_so_small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ListView android:id="@+id/simple_list"
            android:dividerHeight="3dp"
            android:divider="@null"
            android:layout_height="match_parent"
            android:layout_width="match_parent"/>
    </android.support.v4.widget.SwipeRefreshLayout>
    <LinearLayout android:id="@+id/empty_state"
        android:layout_gravity="center"
        android:visibility="visible"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView android:src="@drawable/ic_warning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <com.senior.gizgiz.hydronet.HelperClass.CustomTextView
            android:text="@string/label_empty_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</RelativeLayout>